setup config file copied

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = ie-nlp-utils
+name = sloth
 version = 0.1.dev0
 
 #Magic! Do not touch this!!
 [options]
 install_requires=
-    pandas
+    numpy
     matplotlib>=2
 package_dir=
     =src
